hphp/hack/test/class_aliases/disabled.php
<?hh

class Original {}

class Alias = Original;
